# Developer_Journey

./: Cargo.toml  README.md  dfx.json
auction/: package-lock.json  package.json
https_get/: Cargo.toml  README.md  dfx.json
https_get/src/https_get_backend/: Cargo.toml  https_get_backend.did
https_get/src/https_get_backend/src/: lib.rs
src/principal_backend/: Cargo.toml
src/principal_backend/src/: lib.rs
storage_canister/: package-lock.json  storage_canister_backend.did
storage_canister/src/storage_canister_backend/: Cargo.toml  storage_canister_backend.did
storage_canister/src/storage_canister_backend/src/: lib.rs
storage_canister/src/storage_canister_frontend/: package.json
storage_canister/src/storage_canister_frontend/src/: App.jsx  FileUpload.jsx
