[package]
name = "https_get_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.15.0"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
#reqwest = {  version = "0.12", features = ["json", "rustls-tls"] }
serde = "1.0.204"
serde_bytes = "0.11.15"